--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="lojas-parceiras">
           <h3><i class="fas fa-store"></i> Lojas Parceiras</h3>
           <div class="grid-lojas">
-            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
+            <div class="loja-todas ativa" data-loja="todas" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
             <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
               <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
             </div>
@@ -102,7 +102,7 @@
         </div>
         <div class="search-bar">
           <input type="text" id="busca" placeholder="Busque por produtos...">
-          <button onclick="searchProducts()"><i class="fas fa-search"></i></button>
+          <button onclick="carregarProdutos()"><i class="fas fa-search"></i></button>
         </div>
         <div class="busca-feedback" id="busca-feedback"></div>
         <div class="loading-spinner" id="loading-spinner"></div>
